--- a/css/regist.css
+++ b/css/regist.css
@@ -3,7 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: rgba(190, 21, 21, 0.4);
+}
 #reg_header{
+
     height: 110px;
     width: 100%;
     box-shadow: 0px 0px 10px orange;
@@ -43,7 +47,7 @@
     width: 850px;
     height: 400px;
     border: 8px solid #eeeeee;
-    background: white;
+    background-color: #b18c8c;
     margin: auto;
     margin-top: 20px;
 }
